mule-user-guide/v/3.7/choice-flow-control-reference.adoc
= 选择流量控制参考
:keywords: anypoint, studio, esb, choice, conditional, if, flow control

*choice flow control*根据消息有效负载或属性动态路由消息。它将条件编程添加到流中，类似于`if/then/else`代码块。

选择流量控制使用 link:/mule-user-guide/v/3.7/mule-expression-language-mel[表达式]来评估消息的内容，然后将消息路由到其范围内的*routing options*之一（参见下图）。它将消息引导到与路由配置相匹配的范围中的第一个路由选项（计算结果为true）。如果没有任何表达式评估为true，则选择流控制会将消息引导至*default*（`else`）路由。

image:Choice_schematic.png[Choice_schematic]

== 添加选择流量控制

[tabs]
------
[tab,title="Studio Visual Editor"]
....
In Studio, drag the *Choice* icon from the Studio palette to the canvas, positioning it within the sequence of link:/mule-user-guide/v/3.7/elements-in-a-mule-flow[building blocks] that form the flow (below). 

image:choice+flow+2.png[choice+flow+2]
....
[tab,title="Studio XML Editor or Standalone"]
....
Add a `choice` element in your flow, with one attribute and, at minimum, two child elements as per the table below. Refer to the code sample below.

[%header%autowidth.spread]
|===
|Attribute |Value
|*doc:name* |unique name for the choice element (not required for Standalone)
|*Child Element* |*Attribute*
|*when* |expression
|*otherwise* |n/a
|===

[source, xml, linenums]
----
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
<flow name="New_Studio_ProjectFlow1" doc:name="New_Studio_ProjectFlow1">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <expression-filter expression="#[message.inboundProperties.'http.request.uri' != '/favicon.ico']" doc:name="Expression"/>
        <set-variable variableName="language" value="#[message.inboundProperties.'http.query.params'.language]" doc:name="Set Language Variable"/>
        <choice doc:name="Choice">
            <when expression="">
            </when>
            <otherwise>
            </otherwise>
        </choice>
        <logger message="#[payload]" level="INFO" doc:name="Logger"/>  
</flow>
----
....
------

== 配置选择流量控制

要配置选择流量控制，您需要确定以下消息路由详细信息：

* 选择流路由器应该评估的内容以确定路由

* 用于提供选择流量控制的路由选项的数量

*  Mule应该为每个路由选项执行什么处理

* 默认路由选项

确定您的路由目标后，请按照此过程来定义路由选项，然后再定义路由指令。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Insert message processors within the dashed line area that signifies the choice flow control scope to define the routing options, making sure to place one of them within the "Default" box to define it as the default routing option. You can place several message processors in a chain for each routing option, as needed. In our example, shown below, we have defined three routing options to reply in Spanish, French, or English:
+
image:Studio_Choice_routingoptions.png[Studio_Choice_routingoptions]
+
. Click the *Choice Router* building block to open its Properties Editor. Here, enter Mule expressions to define the routing logic that Mule applies to incoming messages (see table below; detailed instructions follow).
+
[%header,cols="2*"]
|===
a|
When

a|
Route Message to

|`#[flowVars.language == 'Spanish']` |`Set Payload`
|`#[flowVars.language == 'French']` |`Set Payload`
|`Default` |`Variable`
|===
+
. In the table, double-click the first empty row under *When*:
+
image:ChoiceClickHere.png[ChoiceClickHere]
+
. In the Route Properties dialog, enter: `#[flowVars.language == 'Spanish']`
+
image:ChoiceRouteProperties.png[ChoiceRouteProperties]
+
. Click *OK*. This expression tells Mule to look for a flow variable called `language` on the incoming message and check whether it equals Spanish. If this expression evaluates to true, Mule routes the message to the message processor in that path.
. Click the next empty row, and enter: `#[flowVars.language == 'French']`
+
Just as in the previous row, this expression tells Mule to look for a flow variable called `language` on the incoming message. This time, the expression indicates Mule should check whether `language` equals French. If this expression evaluates to true, Mule routes the message to the message processor in that path.
+
. Click *OK* to save the routing configurations.
. Double-click the **Default **line item to open its Route Properties panel.
+
Notice that:
+
.. You cannot edit the *Expression* field
.. The *Otherwise* box is checked
+
image:Studio_Choice_default_routeproperties.png[Studio_Choice_default_routeproperties]
+
The *Otherwise* box identifies this route as the *Default*  for the choice flow control. If the flow control cannot route a message to any of the preceding routing options in its scope, it directs the message to the default route.
+
. Next, click the topmost *Set Payload* building block within your Choice Router scope to open its Properties Editor and set Value to: `Hola!  `
+
image:HolaAmigos.png[HolaAmigos]
+
If Mule finds the flow variable `language=Spanish`, your message produces this payload as a response.
+
. Click the next *Set Payload* building block for *Reply in French* and set the value to:
+
[source, code]
----
Bonjour!
----
+
If Mule finds the flow variable `language=French`, your message produces this payload as a response.
+
. Click the *Variable Transformer* inside the Default box to open its Properties Editor, then configure it as:
+
image:VarSetLangToEnv.png[VarSetLangToEnv]
+
This Variable Transformer, and the Set Payload that follows it, are only invoked if neither of the expressions in the choice routing logic evaluate to true. Thus, if Mule does not find either the flow variable `language=Spanish` or the flow variable `language=French`, Mule routes the message to this default processing option, which sets the flow variable `language` with the value `English`.
+
[NOTE]
Note that in this configuration you are setting a literal value for the variable, rather than using Mule expression language to extract a value from the message, as you did in the previous Variable Transformer.
+
. Click the *Set Payload* after the Variable Transformer inside the Default box to open its Properties Editor, then configure it as:
+
image:SetPayLoadEnglish.png[SetPayLoadEnglish] 
+
This Set Payload transformer sets a payload for the default option you configured above in your choice routing logic. 
+
As it processes messages, Mule evaluates the expressions defined in your routing options in order, top down, until one of them evaluates to "true".
+
. If necessary, drag and drop building blocks within the choice flow control scope on the canvas to reorder routing options.

....
[tab,title="Studio XML Editor or Standalone"]
....

. To the first `when` element within your choice element, add message processors as child elements to form a routing option to which the choice element can direct messages. Add as many additional `when` elements as needed.
+
[source, xml, linenums]
----
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
<flow name="New_Studio_ProjectFlow1" doc:name="New_Studio_ProjectFlow1">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <expression-filter expression="#[message.inboundProperties.'http.request.uri' != '/favicon.ico']" doc:name="Expression"/>
        <set-variable variableName="language" value="#[message.inboundProperties.'http.query.params'.language]" doc:name="Set Language Variable"/>
        <choice doc:name="Choice">
            <when expression="">
                <set-payload value="Hola!" doc:name="Reply in Spanish"/>
            </when>
            <when expression="">
                <set-payload value="Bonjour!" doc:name="Reply in French"/>
            </when>
            <otherwise>
            </otherwise>
        </choice>
        <logger message="#[payload]" level="INFO" doc:name="Logger"/>  
</flow>
----
+
. Configure the contents of the `otherwise` child element to define the default routing option to which your choice router can direct messages if all the previous when expressions evaluate to false. Refer to code sample below.
+
[source, xml, linenums]
----
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
<flow name="New_Studio_ProjectFlow1" doc:name="New_Studio_ProjectFlow1">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <expression-filter expression="#[message.inboundProperties.'http.request.uri' != '/favicon.ico']" doc:name="Expression"/>
        <set-variable variableName="language" value="#[message.inboundProperties.'http.query.params'.language]" doc:name="Set Language Variable"/>
        <choice doc:name="Choice">
            <when expression="">
                <set-payload value="Hola!" doc:name="Reply in Spanish"/>
            </when>
            <when expression="">
                <set-payload value="Bonjour!" doc:name="Reply in French"/>
            </when>
            <otherwise>
                <set-variable variableName="language" value="English" doc:name="Set Language to English"/>      
                <set-payload value="Hello!" doc:name="Reply in English"/>
            </otherwise>
        </choice>
        <logger message="#[payload]" level="INFO" doc:name="Logger"/>  
</flow>
----
+
. For each `when` element, enter an expression for the choice router to use to evaluate the contents of a message. If, during processing, the expression associated with a routing option evaluates to true, Mule directs the message to that route. Refer to example expression below.
+
[source, xml, linenums]
----
<when expression="#[flowVars.language == 'Spanish']">
----
+
.  As it processes messages, Mule evaluates the expressions defined in your routing options in the order they appear in the config, top down, until one of them evaluates to "true". Adjust the order of the `when` elements in your flow with this in mind.

=== Configuration Summary

[%header%autowidth.spread]
|===
|Element |Description
|*choice* |Dynamically routes messages based on message payload or properties, adding conditional programming to a flow, similar to an `if/then/else` code block.
|===

[%header,cols="2*"]
|====
|Element Attribute |Description
|*doc:name* a|
Customize to display a unique name for the flow control in your application.

Note: Attribute not required in Mule Standalone configuration.

|====

[%header%autowidth.spread]
|===
|Child Element |Description
|*when* |Use to define all non-default routing options within the choice flow control.
|===

[%header%autowidth.spread]
|====
|Child Element Attribute |Value |Description
|*expression* |Mule expression |Use MEL to define an expression that the choice router will use to evaluate the contents of a message. If the expression evaluates to "true", Mule directs the message to this routing option.
|====

[%header%autowidth.spread]
|====
|Child Element |Description
|*otherwise* |Use to define the default routing option for the message, should none of the preceding `when` expressions evaluate to "true"
|====
....
------

[TIP]
要运行和测试此示例，您可能会发现查看 link:/getting-started/content-based-routing[基于内容的路由]很有用。您可以在该流程中找到有关其他构建基块配置的详细信息，以及如何向其发送请求的说明。

== 更改默认路由

您可以更改选择流量控制配置以识别不同的默认路由选项。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Open the Choice Flow Control's Properties Editor, then, in the table, double-click the line item of whichever routing option that you would like to specify as the new default route.
+
image:choice+select+default+1.png[choice+select+default+1]
+
. Check the *Otherwise* box (see below), then click *OK*.
+
image:select+default.png[select+default]
+
. Mule applies the *Default* label to the new default routing option in the table on the Properties Editor (below). (Note that the English routing option now needs a "when" expression defined.)
+
image:select+default+2.png[select+default+2]
+
. Define a `when` expression for the routing option previously identified as the default. (In the example, the English routing option.)
....
[tab,title="Studio XML Editor or Standalone"]
....
Adjust your XML configuration to swap the contents of a `when` element and the `otherwise` element.

The code sample below has been adjusted to make the Spanish language the default routing option and change the English language to a `when` element. Note that the `otherwise` element requires no further configuration, but we defined a new expression for the new `when` element.

[source, xml, linenums]
----
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
<flow name="New_Studio_ProjectFlow1" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <expression-filter expression="#[message.inboundProperties.'http.request.uri' != '/favicon.ico']" doc:name="Expression"/>
        <set-variable variableName="language" value="#[message.inboundProperties.'http.query.params'.language]" doc:name="Set Language Variable"/>
        <choice doc:name="Choice">
            <when expression="#[flowVars.language == 'french']">
                <set-payload value="Bonjour!" doc:name="Reply in French"/>
             </when>
            <otherwise >
                <set-variable variableName="language" value="spanish" doc:name="Set Language to Spanish"/>                
                <set-payload value="Hola!" doc:name="Reply in Spanish"/>
             </otherwise>
            <when expression="#[flowVars.language == 'english']">    
                <set-payload value="Hello!" doc:name="Reply in English"/>
            </when>
        </choice>
        <logger message="#[payload]" level="INFO" doc:name="Logger"/>   
</flow>
----
....
------

== 完整的示例代码

[source, xml, linenums]
----
<mule xmlns:vm="http://www.mulesoft.org/schema/mule/vm" xmlns:scripting="http://www.mulesoft.org/schema/mule/scripting" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/scripting http://www.mulesoft.org/schema/mule/scripting/current/mule-scripting.xsd
http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/current/mule-vm.xsd">
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
<flow name="New_Studio_ProjectFlow1" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <expression-filter expression="#[message.inboundProperties.'http.request.uri' != '/favicon.ico']" doc:name="Expression"/>
        <set-variable variableName="language" value="#[message.inboundProperties.'http.query.params'.language]" doc:name="Set Language Variable"/>
        <choice doc:name="Choice">
            <when expression="#[flowVars.language == 'french']">
                <set-payload value="Bonjour!" doc:name="Reply in French"/>
             </when>
            <when expression="#[flowVars.language == 'spanish']">
                <set-payload value="Hola!" doc:name="Reply in Spanish"/>
             </when>
            <otherwise >
                <set-variable variableName="language" value="English" doc:name="Set Language to English"/>      
                <set-payload value="Hello!" doc:name="Reply in English"/>
             </otherwise>
        </choice>
        <logger message="#[payload]" level="INFO" doc:name="Logger"/>   
</flow>
</mule>
----

这个例子的流程是：

image:FinalFlow.png[FinalFlow]

== 另请参阅

* 有关Choice Flow Control的更多信息，请参阅Routing Message Processors页面上的 link:/mule-user-guide/v/3.7/routers[选择]部分。
